fixed layout problems with cards

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -63,7 +63,7 @@ Image placeholders: placemi.com
 #t-cards {
     padding-top: 80px;
     padding-bottom: 80px;
-    dispaly: flex;
+    display: flex;
     justify-content: center;
 }
 
@@ -159,5 +159,4 @@ Image placeholders: placemi.com
     -webkit-transition: padding 400ms ease-in-out;
     transition: padding 400ms ease-in-out;
 }
-
 
